--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,6 @@
     "minimum-stability": "stable",
     "require-dev": {
         "phpunit/phpunit": "^11.5"
-    }
+    },
+    "license": "MIT"
 }
