--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,31 @@
 {
     "name": "julienlinard/php-router",
-    "description": "Un routeur PHP personnalisé",
-    "version": "1.0.0",
+    "description": "Un routeur PHP moderne et complet avec support des routes dynamiques, middlewares, groupes de routes et génération d'URL. Compatible PHP 8+ avec Attributes.",
     "type": "library",
+    "keywords": [
+        "router",
+        "routing",
+        "php",
+        "php8",
+        "middleware",
+        "http",
+        "routes",
+        "attributes",
+        "psr-4"
+    ],
+    "homepage": "https://github.com/julien-lin/php-router",
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "Julien Linard",
+            "email": "julien.linard.dev@gmail.com",
+            "homepage": "https://github.com/julien-lin"
+        }
+    ],
+    "support": {
+        "issues": "https://github.com/julien-lin/php-router/issues",
+        "source": "https://github.com/julien-lin/php-router"
+    },
     "require": {
         "php": ">=8.0"
     },
@@ -11,15 +34,18 @@
             "JulienLinard\\Router\\": "src/Router/"
         }
     },
-    "authors": [
-        {
-            "name": "Julien Linard",
-            "email": "julien.linard.dev@gmail.com"
+    "autoload-dev": {
+        "psr-4": {
+            "JulienLinard\\Router\\Tests\\": "tests/"
         }
-    ],
-    "minimum-stability": "stable",
+    },
     "require-dev": {
         "phpunit/phpunit": "^11.5"
     },
-    "license": "MIT"
+    "scripts": {
+        "test": "phpunit",
+        "test-coverage": "phpunit --coverage-text"
+    },
+    "minimum-stability": "stable",
+    "prefer-stable": true
 }
