--- a/composer.json
+++ b/composer.json
@@ -47,5 +47,6 @@
         "test-coverage": "phpunit --coverage-text"
     },
     "minimum-stability": "stable",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "version": "1.0.0"
 }
